2008-04-24  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/basisset.cpp: Added destructor bits.

2008-04-23  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitalextension.cpp: Sorted out the units
	in the cube calculation initialisation...

2008-04-22  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitalextension.cpp: Work out the
	dimensions of the cube from the molecule, also clear the molecule.
	Also added a call to processEvents() to maintain interactivity.

	* libavogadro/src/extensions/basisset.*,
	libavogadro/src/extensions/gaussianfchk.*,
	libavogadro/src/extensions/orbitaldialog.*,
	libavogadro/src/extensions/orbitalextension.*,
	libavogadro/src/extensions/CMakeLists.txt: Added a new orbital
	extension. This extension uses the new BasisSet class along with
	GaussianFchk to load a formatted Gaussian checkpoint file and
	calculate MOs. Support for more programs and more features soon.

2008-04-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/treeitem.*: New class for handling filenames in
	model/view context, particularly a tree browser.

	* libavogadro/src/tools/directorytreemodel.*: New class for
	handling directory trees with multiple paths. (Basic Qt class
	QDirModel gives too much file info and doesn't handle multiple
	top-level directories.)

	* libavogadro/src/tools/insertfragmentdialog.*: New class to
	combine the SMILES generation and reading in fragment files. Still
	needs a bit of polish.

	* libavogadro/src/tools/drawtool.*: Use above.

	* libavogadro/src/tools/drawcommand.*: Change InsertSMILES class
	to InsertFragment (now that we have a general fragment browser).

2008-04-16  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/navigate.*: Add general rotate(x, y, z) method
	(for scripting).

2008-04-15  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/autoopttool.cpp,
	libavogadro/src/tools/bondcentrictool.cpp,